Closed Bug 577041 Opened 14 years ago Closed 13 years ago

The number of messages in a group appears in the Tag column.

Categories

(Thunderbird :: Mail Window Front End, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.3a3

People

(Reporter: WPeyser, Assigned: Bienvenu)

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.6) Gecko/20100625 Firefox/3.6.6 ( .NET CLR 3.5.30729)
Build Identifier: 3.0.5

The number of messages in a group appears in the Tag column. How ridiculous!

Reproducible: Always

Steps to Reproduce:
1. Sort the Inbox by group.
2. Display the Tag column.
3.
Actual Results:  
The number of messages in each group appears in the Tag column.

Expected Results:  
The number of messages in each group should not appear in the Tag column.
Aureliano can you confirm ?
Attached image screenshot of the issue
Confirmed in a folder when sort by date and grouped by sort is checked.

Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.8pre) Gecko/20100720 Lightning/1.0b2 Lanikai/3.1.2pre ID:20100720032855

pop3
Status: UNCONFIRMED → NEW
Ever confirmed: true
I was working this on awhile ago and can reproduce on Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.2.13) Gecko/20101207 Lightning/1.0b2 Thunderbird/3.1.7, let me assign to myself as well so I don't forget.
Assignee: nobody → gary
OS: Windows 7 → All
Hardware: x86 → All
Version: unspecified → Trunk
good:
version 3 alpha 1 (20060615)

bad:
version 3 alpha 1 (20060616)

http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-06-15+03%3A00%3A00&maxdate=2006-06-16+03%3A00%3A00&cvsroot=%2Fcvsroot

Seems to point at bug 341661 but the underlying one might be bug 114656.

In any case, cc'ing bienvenu who wrote most of the tag patches.
Assignee: gary → nobody
Keywords: regression
grumble, I needed to tweak nsMsgGroupView so that it was testable from js, but now it is, and I added a little check in the view xpcshell test for this bug, and last but not least, fixed the bug.

The test only fails with tweaked nsMsgGroupView (minus the bug fix) because otherwise the derived nsMsgGroupView method doesn't get called.
Assignee: nobody → bienvenu
Attachment #512897 - Flags: review?(bugmail)
Comment on attachment 512897 [details] [diff] [review]
proposed fix with unit test

Your grumble message confuses me but the patch seems straightforward.
Attachment #512897 - Flags: review?(bugmail) → review+
grumble, just because I thought I'd done all I needed to do to make the view cell text code testable from js, and the first bug I fixed after required a change to the core code for testing :-)
fixed on trunk, with unit test - http://hg.mozilla.org/comm-central/rev/9d21c829abc7
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a3
You need to log in before you can comment on or make changes to this bug.