don't show total count in tag column in grouped view, r=asuth, bug 577041